// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Zaraz integration default events mapper should map the Checkout Started event correctly 1`] = `
Array [
  Array [
    "Checkout Started",
    Object {
      "currency": "USD",
      "products": Array [
        Object {
          "product_id": "507f1f77bcf86cd799439011",
        },
      ],
      "value": 24.64,
    },
  ],
]
`;

exports[`Zaraz integration default events mapper should map the Order Completed event correctly 1`] = `
Array [
  Array [
    "Order Completed",
    Object {
      "currency": "USD",
      "name": "50314b8e9bcf000000000000",
      "order_id": "50314b8e9bcf000000000000",
      "products": Array [
        Object {
          "product_id": "507f1f77bcf86cd799439011",
        },
      ],
      "subtotal": 19,
      "value": 24.64,
    },
  ],
]
`;

exports[`Zaraz integration default events mapper should map the Payment Info Added event correctly 1`] = `
Array [
  Array [
    "Payment Info Entered",
    Object {
      "currency": "USD",
      "products": Array [
        Object {
          "product_id": "507f1f77bcf86cd799439011",
        },
      ],
      "value": 24.64,
    },
  ],
]
`;

exports[`Zaraz integration default events mapper should map the Product Added to Cart event correctly 1`] = `
Array [
  Array [
    "Product Added",
    Object {
      "currency": "USD",
      "name": "Gareth McConnell Dreamscape T-Shirt",
      "price": 19,
      "product_id": "507f1f77bcf86cd799439011",
    },
  ],
]
`;

exports[`Zaraz integration default events mapper should map the Product Added to Wishlist event correctly 1`] = `
Array [
  Array [
    "Product Added to Wishlist",
    Object {
      "category": "Clothing/Tops/T-shirts",
      "currency": "USD",
      "name": "Gareth McConnell Dreamscape T-Shirt",
      "price": 19,
      "product_id": "507f1f77bcf86cd799439011",
    },
  ],
]
`;

exports[`Zaraz integration default events mapper should map the Product Viewed event correctly 1`] = `
Array [
  Array [
    "Product Viewed",
    Object {
      "currency": "USD",
      "name": "Gareth McConnell Dreamscape T-Shirt",
      "price": 19,
      "product_id": "507f1f77bcf86cd799439011",
    },
  ],
]
`;

exports[`Zaraz integration default events mapper should map the Sign-up Form Completed event correctly 1`] = `
Array [
  Array [
    "Sign-up Form Completed",
    Object {
      "method": "Acme",
    },
  ],
]
`;

exports[`Zaraz integration default events mapper should map the search event correctly 1`] = `
Array [
  Array [
    "Products Searched",
    Object {
      "currency": "EUR",
      "price": 0,
      "products": Array [
        Object {
          "product_id": "10000",
        },
        Object {
          "product_id": "20000",
        },
      ],
      "query": "shoes",
    },
  ],
]
`;
